Added multihomesPlayerListener class

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,9 +1,9 @@
-messagesucesshome: 'teleportowanie do domu'
-messagesucesssethome: 'Zostales przeteleportowany'
+messagesucesshome: 'Zostałeś przeteleportowany do'
+messagesucesssethome: 'Dom ustawiony'
 sethomenoargs: 'Poprawne uzycie /sethome <nazwa domu>'
-sethomenull: 'Dom nie istnieje'
-homelist: 'Lista domow: '
-homelistnull: 'Nie masz zadnych domow'
+sethomenull: 'Taki dom nie istnieje'
+homelistnull: 'Nie masz zadnych domow!'
+homelist: 'Lista domow'
+unknownhome: 'Nie masz zapisanego domu'
 delhomenoargs: 'Poprawne uzycie /delhome <nazwa domu>'
-youdeletedhome: 'Usunales dom: '
-unknownhome: 'Nie masz zapisanego domu : '
+youdeletedhome: 'Usuniety dom: '
