--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,6 +4,10 @@ sethomenoargs: 'Poprawne uzycie /sethome <nazwa domu>'
 sethomenull: 'Taki dom nie istnieje'
 homelistnull: 'Nie masz zadnych domow!'
 homelist: 'Lista domow'
-unknownhome: 'Nie masz zapisanego domu'
+unknownhome: 'Nie masz zapisanego domu '
 delhomenoargs: 'Poprawne uzycie /delhome <nazwa domu>'
 youdeletedhome: 'Usuniety dom: '
+item: 'DIAMOND_BLOCK'
+itemconsumed: 'Zwiekszyles limit home o 1!'
+maxhomes: 5
+youneeditem: 'Aby zwiększyć liczbę home zdobądź '
