repaired player interact, added delay and bypass permissions

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,18 +1,20 @@
-messagesucesshome: 'Zostałeś przeteleportowany do '
-messagesucesssethome: 'Dom ustawiony'
-sethomenoargs: 'Poprawne uzycie /sethome <nazwa domu>'
-sethomenull: 'Taki dom nie istnieje'
-homelistnull: 'Nie masz zadnych domow!'
-homelist: 'Lista domow'
-unknownhome: 'Nie masz zapisanego domu '
-delhomenoargs: 'Poprawne uzycie /delhome <nazwa domu>'
-youdeletedhome: 'Usuniety dom: '
+messagesucesshome: 'Teleported to: '
+messagesucesssethome: 'Home set.'
+sethomenoargs: 'Usage /sethome <home>'
+sethomenull: 'This home doesnt exist'
+homelistnull: 'You dont have any home!'
+homelist: 'Home list '
+unknownhome: 'You dont have home '
+delhomenoargs: 'Usage /delhome <home>'
+youdeletedhome: 'Deleted home: '
 item: 'DIAMOND'
 itemamount: 64
-itemconsumed: 'Zwiekszyles limit home o 1!'
+itemconsumed: 'You have increased limit!'
 maxhomes: 5
-youneeditem: 'Aby zwiększyć liczbę home zdobądź '
-sethome: ' - Ustawianie domu'
-home: ' - Wyswietlanie listy domow'
-delhome: ' - Usuwanie domu'
+youneeditem: 'If you want more homes, you have to get: '
+sethome: ' - Setting home'
+home: ' - Displaying list of homes'
+delhome: ' - Deleting home'
+youwillbetp: 'You will be teleported in: '
+delaytime: 3
 
