--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: Multihomes
-version: ${project.version}
+version: 1.1
 main: koral.multihomes.Multihomes
 api-version: 1.13
+authors: [koral]
 commands:
   sethome:
   home:
